added an edit and delete function

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <section class="header">
             <h1>Python Developer</h1>
             <p>I love Python!.</p>
-            <img src="https://cdn.pixabay.com/photo/2016/11/29/13/14/attractive-1869761_1280.jpg" alt="Headshot of myself">
+            <img src="https://media.licdn.com/media/AAYQAQSOAAgAAQAAAAAAAB-zrMZEDXI2T62PSuT6kpB6qg.png" alt="Headshot of myself">
         </section>
         <section id="about">
             <h2>About Me</h2>
@@ -19,10 +19,14 @@
             <h2>Skills</h2>
             <ul>
                 <li>Python</li>
+                <li>SQL</li>
                 <li>Flask</li>
                 <li>SQLAlchemy</li>
+                <li>Pandas</li>
+                <li>Numpy</li>
                 <li>GitHub</li>
                 <li>Visual Studio Code</li>
+                <li>Jupyter Lab</li>
             </ul>
         </section>
         <section id="projects">
