fixed the bug where the css would only load on certain pages and not on others

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <section class="header">
             <h1>Python Developer</h1>
             <p>I love Python!.</p>
-            <img src="https://media.licdn.com/media/AAYQAQSOAAgAAQAAAAAAAB-zrMZEDXI2T62PSuT6kpB6qg.png" alt="Headshot of myself">
+            <img src="" alt="Headshot of myself">
         </section>
         <section id="about">
             <h2>About Me</h2>
