--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,7 +2,7 @@
 
     {% block content %}
             <section class="header">
-                <h1>New Project</h1>
+                <h1> Edit Project</h1>
             </section>
             <section id="form">
                 <form action="{{url_for('edit', id=project.id)}}" method="POST">
