--- a/templates/projectform.html
+++ b/templates/projectform.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
     {% block content %}
-            <section class="header">
+            <!-- <section class="header"> -->
                 <h1>New Project</h1>
             </section>
             <section id="form">
