Added images and downloads to static directory and changed some templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,19 @@
 {% block content %}
         <section class="header">
             <h1>Python Developer</h1>
-            <p>I love Python!.</p>
-            <img src="" alt="Headshot of myself">
+            <p>Python Rules!.</p>
+            <img src="/static/images/photo.png" alt="Headshot of myself" type="image/png">
         </section>
         <section id="about">
             <h2>About Me</h2>
             <p>
-                Hello! I am an aspiring Datascientist. My hobbies include, programming, music theory, and guitar.  
+                Hello! I am an aspiring Datascientist. My hobbies include, programming, music theory, and guitar. If you'd like to know more about me, please check out the link below.
             </p>
+            <a href="{{url_for('about')}}" style="color:#ffffff;">
+                <i class="fas fa-link" ></i>
+                 More About Me 
+            </a>
+
             <div id="triangle1"></div>
             <div id="triangle2"></div>
         </section>
@@ -37,7 +42,9 @@
             <div id="project-list">
                     {% for project in projects %}
                 <div id={{project.id}} class="a-project">
-                        <a href="/projects/{{project.id}}" style="color:#51475c;">{{project.title}}</a> <br><br>
+                        <a href="/projects/{{project.id}}" style="color:#51475c; font-size: 30px;">{{project.title}}
+                            <i class="fas fa-link"></i>
+                        </a> <br>
                     <a href={{project.url}} class="github-btn">
                         <i class="fab fa-github"></i>
                         View on GitHub
