--- a/templates/about.html
+++ b/templates/about.html
@@ -1,38 +1,26 @@
 {% extends 'layout.html' %}
   {% block content %}
         <section class="header">
-            <h1>Your Name</h1>
+            <h1>Richard Sullivan Andison</h1>
             <p>Freelance Data Scientist</p>
-            <!--I would suggest choosing a different picture here.-->
-            <!--Like maybe a hobby photo-->
-            <img src="https://cdn.pixabay.com/photo/2020/09/04/12/32/kayak-5543935_1280.jpg" alt="Headshot of myself">
+            
+            <img src="/static/images/photo.png" alt="Headshot of myself">
         </section>
         <section id="about-page">
             <div id="triangle7"></div>
             <div id="triangle8"></div>
-            <h2>Section Title</h2>
+            <h2>More About Me</h2>
             <p>
-                Soufflé cupcake cupcake. 
-                Brownie chocolate cake gingerbread candy carrot cake sesame snaps cookie cake. 
-                Bear claw pastry candy canes tart cookie caramels cotton candy caramels sweet roll. 
-                Bonbon tootsie roll gummi bears sugar plum pie croissant. 
-                Muffin sweet roll bonbon. 
-                Carrot cake gummies cheesecake. 
-                Gummi bears powder apple pie. 
-                Topping cake powder. 
-                Pastry chupa chups caramels.
+                Hello! My friends call be Sully! I'm currently employed at Safeway in Trail, BC. In a few weeks I'll be working at Rustic Crust, making gelato and woodfired pizza.
+                My previous work experience is mostly in kitchens and I have completed my first year of professional cooking at Selkirk College. My current aspiration is to become a
+                freelance datascientist and programmer. I feel like I'm well on my way and after I complete my current course, I intend to learn more about computer science and lower
+                level programming languages such as C and Assembly Language in the future. 
             </p>
             <p>
-                Soufflé cupcake cupcake. 
-                Brownie chocolate cake gingerbread candy carrot cake sesame snaps cookie cake. 
-                Bear claw pastry candy canes tart cookie caramels cotton candy caramels sweet roll. 
-                Bonbon tootsie roll gummi bears sugar plum pie croissant. 
-                Muffin sweet roll bonbon. 
-                Carrot cake gummies cheesecake. 
-                Gummi bears powder apple pie. 
-                Topping cake powder. 
-                Pastry chupa chups caramels.
+                My hobbies outside of programming include music theory and playing instruments. I can play guitar and bass fairly well as well as a little bit of piano.
+                I want to travel a lot and live by the sea in the future and I'm a big fan of public transportation and train/bus infrastructure. 
+                You can find a link to my resume below. 
             </p>
-            <a href="#"><i class="far fa-file"></i>Resume</a>
+            <a href="{{url_for('download_file')}}"><i class="far fa-file"></i>Resume</a>
         </section>
     {% endblock %}
