--- a/templates/detail.html
+++ b/templates/detail.html
@@ -2,18 +2,17 @@
 
     {% block content %}
             <section class="header">
-                <h1>Python Title</h1>
-                <p>Jan 2021</p>
-                <a href="#" class="github-btn">
+                <h1>{{project.title}}</h1>
+                <p>{{date.year}}-{{date.strftime("%B")}}</p>
+                <a href="{{project.url}}" class="github-btn">
                     <i class="fab fa-github"></i>
                     View on GitHub
                 </a>
                 <ul class="project-skills">
                     <div>
-                        <li>Catching exceptions</li>
-                        <li>Creating a loop</li>
-                        <li>Accepting user input</li>
-                        <li>Conditional statements</li>
+                        {% for skill in skills %}
+                        <li>{{skill}}</li>
+                        {% endfor %}
                     </div>
                 </ul>
             </section>
