Fixed bug :D page now updates proper project information every time. Projects now show up in dropdown on 404 page, added social links

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,13 +54,13 @@
         {% endblock %}
         <section class="footer">
           <div class="socials">
-              <a href="">
+              <a href="https://twitter.com/SullivanAnd1">
                   <i class="fab fa-twitter"></i>
               </a>
-              <a href="">
+              <a href="https://github.com/RSA000">
                   <i class="fab fa-github"></i>
               </a>
-              <a href="">
+              <a href="https://www.linkedin.com/in/richard-andison-9115101b3/">
                   <i class="fab fa-linkedin"></i>
               </a>
           </div>
