added video to about html

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,6 +10,8 @@
             <div id="triangle7"></div>
             <div id="triangle8"></div>
             <h2>More About Me</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/2IcjFXyaIqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
             <p>
                 Hello! My friends call be Sully! I'm currently employed at Safeway in Trail, BC. In a few weeks I'll be working at Rustic Crust, making gelato and woodfired pizza.
                 My previous work experience is mostly in kitchens and I have completed my first year of professional cooking at Selkirk College. My current aspiration is to become a
